--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/neo_simulation2
-	previous = 
-	base = 3c09693
+	previous = 3c09693
+	base = 907184e
 	trim = 
 	trimbase = 
