--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/neo_simulation2
-	previous = 
-	base = 72c5ba8
+	previous = 72c5ba8
+	base = 24957bf
 	trim = 
 	trimbase = 
