--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/neo_simulation2
-	previous = 
-	base = 6b41218
+	previous = 6b41218
+	base = 95a7c2e
 	trim = 
 	trimbase = 
