--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/neo_simulation2
-	previous = 
-	base = 5ba6444
+	previous = 5ba6444
+	base = 59cf547
 	trim = 
 	trimbase = 
